# sandLua

./: ENHANCEMENTS.md  GEMINI.md  main.lua  main.py  pyproject.toml  todo.md
archive/: a.lua  b.lua  disasm.lua
docs/: README.md  _sidebar.md  index.html
docs/commands/: debug.md  disasm.md  help.md  hex.md  load.md
docs/core/: disasm.md  hexview.md  loader.md
docs/core/formats/: elf.md
src/: base_command.py  constants.py  debug.py  disasm.py  file_handler.py  help.py  helpers.py  hex.py  load.py  shell.py
src/commands/: debug.lua  disasm.lua  help.lua  hex.lua  load.lua
src/core/: analysis.lua  disasm.lua  hexview.lua  loader.lua  sandbox.lua  shell.lua
src/core/formats/: elf.lua  macho.lua  pe.lua
src/utils/: helpers.lua
tests/: core.lua  corpus_test.lua  luaunit.lua  test_corpus.py  test_disasm.py
