[project]
name = "sandlua"
version = "0.1.0"
description = "A Python-based reverse engineering and malware analysis toolkit"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "capstone",
    "pefile",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.build"

[tool.uv]
# Configuration for uv, if needed
